--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 install: 
   - pip install -r requirements.txt
 script: 
-  - nosetests tests -v
+  - nosetests --with-coverage --cover-package=bucketlist
