--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,5 @@ install:
   - pip install -r requirements.txt
 script: 
   - nosetests --with-coverage --cover-package=bucketlist
+after_success:
+  - coveralls
