--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
   - "3.6"
 install: 
   - pip install -r requirements.txt
+  - pip install python-coveralls
 script: 
   - nosetests --with-coverage --cover-package=bucketlist
 after_success:
-  coveralls
+  - coveralls
