--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
 script: 
   - nosetests --with-coverage --cover-package=bucketlist
 after_success:
-  - coveralls
+  - coveralls --base_dir bucketlist
