--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ click==6.7
 coverage==4.4.1
 dominate==2.3.1
 flake8==3.3.0
-Flask==0.12.1
+Flask>=0.12.1
 Flask-Bootstrap==3.3.7.1
 Flask-Cors==3.0.2
 Flask-Login==0.4.0
