--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.projectName = 'flaskApi2'
-sonar.host.url = 'http://10.0.15.17:9000'
+sonar.projectKey = flaskApi
 sonar.analysis.mode=
+sonar.sources = ./
